# ilovetools

./: CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  FIXED_v0.2.7.txt  INSTALL_FIX.md  PUBLISHING.md  QUICKFIX.md  QUICKSTART.md  RELEASE_CHECKLIST_v0.2.22.md  RELEASE_CHECKLIST_v0.2.23.md  RELEASE_CHECKLIST_v0.2.24.md  RELEASE_CHECKLIST_v0.2.25.md  RELEASE_NOTES_v0.2.12.md  RELEASE_NOTES_v0.2.13.md  RELEASE_NOTES_v0.2.14.md  RELEASE_NOTES_v0.2.15.md  RELEASE_NOTES_v0.2.16.md  RELEASE_NOTES_v0.2.17.md  RELEASE_NOTES_v0.2.18.md  RELEASE_NOTES_v0.2.19.md  RELEASE_NOTES_v0.2.20.md  RELEASE_NOTES_v0.2.21.md  RELEASE_NOTES_v0.2.23.md  RELEASE_NOTES_v0.2.24.md  RELEASE_NOTES_v0.2.25.md  RELEASE_NOTES_v0.2.7.md  SETUP_COMPLETE.md  TRIGGER_PUBLISH_v0.2.23.md  VERSION_0.2.7.1_SUMMARY.md  fix_import.py  pyproject.toml  setup.py
.github/workflows/: publish-to-pypi.yml
docs/: ACTIVATION_IMPORT_FIX.md  POSITIONAL_ENCODING.md
examples/: attention_examples.py  augmentation_examples.py  autoencoder_examples.py  cnn_examples.py  convolution_examples.py  detection_defaults_comparison.py  detection_examples.py  diffusion_examples.py  dropout_examples.py  embedding_examples.py  gan_examples.py  gnn_examples.py  losses_examples.py  lr_schedulers_examples.py  normalization_complete_example.py  normalizing_flows_examples.py  pooling_examples.py  positional_encoding_examples.py  recurrent_examples.py  regularization_complete_example.py  reinforcement_examples.py  schedulers_examples.py  transfer_examples.py  vae_examples.py  weight_init_examples.py
ilovetools/: __init__.py  _build_marker.txt
ilovetools/ai/: __init__.py  context_manager.py  llm_helpers.py  prompt_engineering.py  tool_registry.py
ilovetools/conversion/: HOTFIX.md  config_converter.py  (+1 more)
patches/: config_converter_line8.patch
scripts/: add_optimizers_to_init.py  fix_optional_import.py  publish.sh  test_activation_aliases.py  trigger_publish.sh  verify_attention.py  verify_cnn.py  verify_normalization.py  verify_normalization_advanced.py  verify_optimizers.py  verify_regularization_imports.py  verify_rnn.py
tests/: test_attention.py  test_auto_async_helpers.py  test_auto_context_manager.py  test_auto_data_structures.py  test_auto_hash_utils.py  test_auto_json_utils.py  test_auto_llm_json.py  test_auto_patterns.py  test_auto_prompt_engineering.py  test_auto_skills.py  test_auto_text.py  test_auto_text_analysis.py  test_auto_tool_registry.py  test_autoencoder.py  test_detection.py  test_detection_defaults.py  test_reinforcement.py  test_transfer.py
(+31 files in other folders)
