[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ilovetools"
version = "0.2.38"
description = "A comprehensive Python utility library with modular tools for AI/ML, data processing, and daily programming needs"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Ali Mehdi", email = "ali.mehdi.dev579@gmail.com"}
]
keywords = ["utilities", "tools", "ai", "ml", "data-processing", "automation", "reinforcement-learning", "q-learning", "dqn", "deep-q-network", "policy-gradient", "reinforce", "actor-critic", "a3c", "ppo", "proximal-policy-optimization", "ddpg", "sac", "soft-actor-critic", "td-learning", "temporal-difference", "bellman-equation", "value-function", "policy-network", "exploration-exploitation", "epsilon-greedy", "reward-shaping", "experience-replay", "target-network", "advantage-function", "gae", "generalized-advantage-estimation", "trust-region", "trpo", "on-policy", "off-policy", "model-free", "markov-decision-process", "mdp", "deep-learning", "neural-networks", "pytorch", "tensorflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
ai = [
    "openai>=1.0.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "sentence-transformers>=2.2.0",
]
image = [
    "Pillow>=10.0.0",
    "opencv-python>=4.8.0",
]
audio = [
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
]
all = [
    "openai>=1.0.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "sentence-transformers>=2.2.0",
    "Pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/AliMehdi512/ilovetools"
Repository = "https://github.com/AliMehdi512/ilovetools"
Issues = "https://github.com/AliMehdi512/ilovetools/issues"
"Bug Reports" = "https://github.com/AliMehdi512/ilovetools/issues"
Source = "https://github.com/AliMehdi512/ilovetools"
